NavBar - Add GlobalSearch

--- a/app/globals.css
+++ b/app/globals.css
@@ -10,16 +10,16 @@ body {
 
 @layer utilities {
   .flex-center {
-    @apply flex justify-center items-center;
+    @apply flex items-center justify-center;
   }
   .flex-between {
-    @apply flex justify-between items-center;
+    @apply flex items-center justify-between;
   }
   .flex-start {
-    @apply flex justify-start items-center;
+    @apply flex items-center justify-start;
   }
   .card-wrapper {
-    @apply bg-light-900 dark:dark-gradient shadow-light-100 dar;
+    @apply dark:dark-gradient dar bg-light-900 shadow-light-100;
   }
   .btn {
     @apply bg-light-800 dark:bg-dark-300 !important;
@@ -31,7 +31,7 @@ body {
     @apply bg-light-700 dark:bg-dark-300 !important;
   }
   .markdown {
-    @apply max-w-full prose dark:prose-p:text-light-700 dark:pros;
+    @apply dark:pros prose max-w-full dark:prose-p:text-light-700;
   }
   .primary-gradient {
     background: linear-gradient(129deg, #ff7000 0%, #e2995f 100%);
@@ -44,10 +44,10 @@ body {
     );
   }
   .tab {
-    @apply min-h-full dark:bg-dark-400 bg-light-800 text-light-5;
+    @apply text-light-5 min-h-full bg-light-800 dark:bg-dark-400;
   }
   .no-focus {
-    @apply focus-visible:ring-0 focus-visible:ring-transparent focus;
+    @apply focus-visible:ring-0 focus-visible:ring-transparent focus-visible:ring-offset-0 !important;
   }
 }
 
